manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "ccaksworkshop"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "ccaksworkshop"
    spec:
      containers:
        - name: "ccaksworkshop"
          image: "chanchakaks.azurecr.io/ccaksworkshop"
          ports:
          - containerPort: 8080
