manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "proxynorbaccluster2-d8d6"
    labels:
        app: "proxynorbaccluster2-d8d6"
spec:
    type: LoadBalancer
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "proxynorbaccluster2-d8d6"
