manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "ccaksworkshop"
    labels:
        app: "ccaksworkshop"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: ccaksworkshop1c19-ccaksworkshop.e0f783b019304948af5b.westus2.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "ccaksworkshop"
                servicePort: 8080
